k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener
  namespace: shortener
  labels:
    app: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortener
  template:
    metadata:
      labels:
        app: shortener
    spec:
      containers:
        - name: shortener
          image: gcr.io/atlas-k8s/shortener:latest
          ports:
            - containerPort: 3000
