k8s/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener
  namespace: shortener
spec:
  selector:
    app: shortener
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
