k8s/app.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: shortener
  namespace: shortener
spec:
  rules:
    - host: atls.cc
      http:
        paths:
          - backend:
              serviceName: shortener
              servicePort: 3000
            path: /
    - host: k8s.atls.cc
      http:
        paths:
          - backend:
              serviceName: shortener
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - atls.cc
        - k8s.atls.cc
      secretName: shortener-tls
